<resources>
    <string name="app_name">VietBills</string>
    <string name="app_logo">logo</string>
    <string name="default_value">0</string>

    <!--     Home Activity    -->
    <string name="title_home">Trang Chủ</string>
    <string name="option_electricity_home">Tính Điện</string>
    <string name="option_water_home">Tính Nước</string>
    <string name="option_history_home">Lịch Sử</string>
    <string name="option_statistic_home">Thống Kê</string>

    <!--     Electricity Bill Activity    -->
    <string name="title_electric_bill">Tính Điện</string>
    <string name="from_startdate_to_enddate">Từ ngày - đến ngày</string>
    <string name="firstNumber">Số đầu</string>
    <string name="secondNumber">Số cuối</string>
    <string name="totalAmountElectricity">Tổng điện năng tiêu thụ (kWh)</string>
    <string name="payment">Thành tiền</string>
    <string name="price_before_tax">Tiền trước thuế</string>
    <string name="price_electric_tax">Thuế GTGT (8%)</string>
    <string name="price_total">Tổng cộng (VNĐ)</string>
    <string name="button_calculate">Tính</string>
    <string name="button_save">Lưu</string>

    <!--     Electricity Bill Activity    -->
    <string name="title_water_bill">Tính Nước</string>
    <string name="totalAmountWater">Khối lượng nước tiêu thụ (m3)</string>
    <string name="price_water_tax">Thuế GTGT (5%)</string>

    <!--     Statistic Activity    -->
    <string name="title_statistic">Thống Kê</string>
    <string name="electric">Điện</string>
    <string name="water">Nước</string>
    <string name="vnd">VNĐ</string>
    <string name="total">Tổng</string>

    <!-- Electric Price Fragment -->
    <string name="detail">Theo quyết định số 1062/QĐ-BCT giá bán lẻ điện cho sinh hoạt được tính như sau:</string>

    <!-- Statistic Total Fragment -->
    <string name="title_statistic_total">Tổng số tiền thanh toán</string>

    <!-- Statistic Average Fragment -->
    <string name="title_statistic_average">Số tiền trung bình\nmỗi tháng</string>

    <!-- item history -->
    <string name="electric_amount">Điện năng tiêu thụ (kWh)</string>
    <string name="water_amount">Số khối nước tiêu thụ (m3)</string>
    <string name="item_payment">Thành tiền (VNĐ)</string>

</resources>