<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ElectricityBillViewModel"
            type="com.example.diennuoc.viewmodel.ElectricityBillViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/layout_electric_bill"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_title_electricity"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/title_electric_bill"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/iv_infor"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iv_back"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_keyboard_backspace_24" />

            <ImageView
                android:id="@+id/iv_infor"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_info_40" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/from_startdate_to_enddate"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_electricity" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="180dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="01/01/2020"
                    android:text="@={ElectricityBillViewModel.startDate}"
                    android:inputType="datetime|date"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="180dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="31/01/2020"
                    android:text="@={ElectricityBillViewModel.endDate}"
                    android:inputType="datetime|date"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:text="@string/firstNumber"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:text="@string/secondNumber"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.073"
                app:layout_constraintStart_toEndOf="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="180dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/default_value"
                    android:text="@={ElectricityBillViewModel.firstNumber}"
                    android:inputType="number"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="180dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/default_value"
                    android:text="@={ElectricityBillViewModel.secondNumber}"
                    android:inputType="number"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:text="@string/totalAmountElectricity"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/default_value"
                    android:text="@={ElectricityBillViewModel.totalAmountElectricity}"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="35dp"
                android:text="@string/payment"
                android:textColor="@color/custom_red"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="180dp"
                android:layout_height="0dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/custom_green"
                android:text="@string/button_save"
                android:textColor="@color/custom_yellow"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnCalculate"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="180dp"
                android:layout_height="0dp"
                android:backgroundTint="@color/custom_green"
                android:text="@string/button_calculate"
                android:textColor="@color/custom_yellow"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:text="@string/price_before_tax"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:text="@string/price_electric_tax"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:text="@string/price_total"
                android:textColor="@color/custom_red"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:hint="@string/default_value"
                android:text="@{ElectricityBillViewModel.priceBeforeTax}"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:hint="@string/default_value"
                android:text="@{ElectricityBillViewModel.priceTax}"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/tv_price_total_electric"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:hint="@string/default_value"
                android:text="@{ElectricityBillViewModel.priceTotal}"
                android:textColor="@color/custom_red"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>